# bunker_backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  first_init.sh  generate-cert.sh  main.py  middlewares.py  pyproject.toml  requirements.txt
_migrations/: env.py
_migrations/versions/: 2024_02_11_0831-5965c03e328a_init_migrations.py
api/auth/: dependencies.py  schemas.py  utils.py  views.py
api/cards/: crud.py  dependencies.py  filters.py  schemas.py  views.py
api/decks/: crud.py  dependencies.py  filters.py  schemas.py  views.py
api/games/: crud.py  dependencies.py  filters.py  schemas.py  views.py
api/moves/: crud.py  dependencies.py  filters.py  schemas.py  sevices.py  views.py
api/polls/: filters.py  views.py
api/rooms/: crud.py  dependencies.py  filters.py  schemas.py  views.py
api/rounds/: crud.py  dependencies.py  filters.py  schemas.py  views.py
api/users/: crud.py  dependencies.py  filters.py  schemas.py  views.py
api/votes/: crud.py  dependencies.py  filters.py  schemas.py  views.py
app/: main.py
auth/: authentification.py  dependencies.py  utils.py  views.py
core/: __init__.py  config.py  exceptions.py  middlewares.py
core/filters/: __init__.py  base_filter.py  filter.py
core/models/: __init__.py  base.py  card.py  card_property.py  card_specification.py  deck.py  dependencies.py  game.py  move.py  player_ move.py  player_card.py  player_session.py  poll.py  room.py  round.py  user.py  vote.py
core/models/enums/: __init__.py  (+1 more)
migrations/: README  env.py
ws/: __init__.py  dependencies.py  managers.py  views.py
(+19 files in other folders)
