[tool.poetry]
name = "bunker 2-0"
version = "0.1.0"
description = ""
authors = ["Ecpopov <ecpopov@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bunker 2"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.24"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic-settings = "^2.1.0"
websockets = "^12.0"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
python-multipart = "^0.0.6"
fastapi-filter = "^1.1.0"
fastapi-pagination = "^0.12.14"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
